$Id$

You are looking at a CVS snapshot of the REL_1_2 branch.

Version 1.2-b1 (?? ??? 2007)
 - Modified iCalendar output to avoid bug in Sunbird 0.7.
 - Fix bug [ 1851220 ] cannot enter multiple categories.. only first one is kept
 - Added new rss_unapproved.php that will generate RSS 2.0 listing
   of unapproved events.
 - Apply PATCH [ 1878014 ] Fix selectDate() JavaScript function
 - Security fix: Better cleansing of search.php 'adv' parameter
 - Security fix: do not allow certain HTML tags in event descriptions
   such as SCRIPT, META, LINK, OBJECT, APPLET and others.
 - Fixes to icalclient.php: include translate.php sooner
 - Apply PATCH [ 1836703 ] a few corrections to Italian.txt
 - Apply PATCH [ 1834400 ] some corrections to Italian.txt
 - Apply PATCH [ 1834285 ] All remaning items for Italian.txt
 - Fix bug [ 1649974 ] 'public access' impossible cause using previous logged
 - Add support for Czech UTF8
 - Change $includedir and $basedir to CONSTANTS
 - Fix bug [ 1797030 ] Error in send_reminder.php
 - Fix bug [ 1737128 ] From notification to "not authorized"
 - Fix bug [ 1823063 ] CVS 1.1.7 - month /week view - no today color right of event
 - Fix bug [ 1829125 ] I can not add external calendars
 - Implemented RFE [ 1829482 ] Display Error Codes, to aid in troubleshooting other bug reports
 - Fix bug [ 1829224 ] getPostVal fails on non-array
 - Added ability to place page in more than one UAC 'page_lookup' group. We should be able to eliminate
   'page_lookup_ex' array eventually.
 - Fix bug [ 1828397 ] "you are not authorized" error
 - Fix bug [ 1828416 ] no pull-down entries for languages at 'preferences' and 'sys
 - Fix bug [ 1823080 ] CVS 1.1.7 - double sunday in month view
 - Applied PATCH [1826466 ] update to translations/Italian.txt
 - Applied PATCH [ 1813253 ] patch for upgrade-postgres.sql
 - Fixed problem with user-app-joomla.php when using https or single word names
 - Fix bug [ 1818796 ] DbCachedir readable by any WebCal installation