@@ -3,6 +3,8 @@ $Id$
 You are looking at a CVS snapshot of the REL_1_2 branch.
 
 Version 1.2-b1 (?? ??? 2007)
+ - Modified iCalendar output to correct ATTENDEE output to conform to
+   RFC2445; fixed attendee to user login if no fullname info available.
  - Modified iCalendar output to avoid bug in Sunbird 0.7.
  - Fix bug [ 1851220 ] cannot enter multiple categories.. only first one is kept
  - Added new rss_unapproved.php that will generate RSS 2.0 listing
